add: admin info logic
